# prodfin-processamento-agenda-testes-e2e-main

./: .gitignore  Makefile  README.md  catalog-info.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/workflows/: devsecops.yml  standard.yaml
.scafflater/: scafflater.jsonc
Result/: log.html  output.xml  report.html
dockerfiles/: .dockerignore  Dockerfile
kube/dev/: app.yaml  infra.yaml
kube/hml/: app.yaml  infra.yaml
kube/prd/: app.yaml  infra.yaml
resource/: main.robot
resource/data/: headers.yaml
resource/data/input/: cancellation_POST_CARD.json  cancellation_POST_PIX.json
resource/keywords/: cancellation.robot  shared_keywords.robot
resource/utils/: generate_cpf.py  helper.robot
src/: README.md  conftest.py  logger.py
src/agenda_testes_e2e/: main.py  settings.py  shutdown.py
src/agenda_testes_e2e/middlewares/request_tracking/: context.py  middleware.py
src/agenda_testes_e2e/middlewares/request_tracking/tests/: test_request_tracking_middleware.py
src/agenda_testes_e2e/v1/: router.py
src/agenda_testes_e2e/v1/controllers/tests/: test_healthcheck_controller.py
tests_cases/: testes_cancell_card.robot
