[tool.poetry]
name = 'agenda_testes_e2e'
version = '0.0.0'
description = 'Integrators Tests e2e with robot '
authors = [ 'O Boticario <alquimia@grupoboticario.com>' ]

[[tool.poetry.source]]
name = 'BoticarioFeed'
url = 'https://pkgs.dev.azure.com/gboticario/_packaging/BoticarioFeed/pypi/simple/'
priority = 'explicit'

[tool.poetry.dependencies]
python = '^3.12'
fastapi = '^0.112.0'
structlog = '^24.4.0'
uvicorn = '^0.30.6'
pydantic-settings = '^2.4.0'
gunicorn = '^23.0.0'
newrelic = '^9.13.0'

[tool.poetry.group.dev.dependencies]
pytest = '^8.3.2'
ipython = '^8.26.0'
mypy = '^1.11.1'
pdbpp = '^0.10.3'
pytest-asyncio = '^0.24.0'
pytest-cov = '^5.0.0'
pytest-deadfixtures = '^2.2.1'
pytest-dotenv = '^0.5.2'
pytest-env = '^1.1.3'
pytest-socket = '^0.7.0'
respx = '^0.21.1'
ruff = '^0.7.0'

[tool.ruff]
line-length = 79
target-version = 'py312'
exclude = [
	'.bzr',
	'.direnv',
	'.eggs',
	'.git',
	'.hg',
	'.mypy_cache',
	'.nox',
	'.pants.d',
	'.pytype',
	'.ruff_cache',
	'.svn',
	'.tox',
	'.venv',
	'__pypackages__',
	'_build',
	'buck-out',
	'build',
	'dist',
	'node_modules',
	'venv',
	'**migrations**',
]

[tool.ruff.lint]
select = [ 'E', 'W', 'F', 'C90', 'UP', 'N', 'I', 'SIM', 'RUF' ]
ignore = [ 'N818' ]
per-file-ignores = { }

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.isort]
known-first-party = [ 'agenda_testes_e2e' ]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.coverage.run]
omit = [ 'src/**/tests/*', 'src/**/settings/*', 'src/**/migrations/*' ]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2

[build-system]
requires = [ 'poetry-core' ]
build-backend = 'poetry.core.masonry.api'